@@ -1,9 +1,15 @@
-# Makefile that can archive the source trees and copy the archive to the snapshot page
+# Makefile that can archive the source trees for SDCC'S snapshot page
 ARCHIVESRCTREES = $(ARCHIVETREES:%=$(STAMPDIR)/%.src-archive)
 
+_ARCHIVE_SRC_TREE_BASENAME = `basename $@ .src-archive`
+_ARCHIVE_BASENAME          = $(_ARCHIVE_SRC_TREE_BASENAME).src
+_ARCHIVE_DIR               = $(STAGINGBASE)/$(TARBALLBASE)/$(_ARCHIVE_BASENAME)
+_ARCHIVE_NAME              = $(_ARCHIVE_BASENAME).tar.gz
+
 %.src-archive: %.fetched $(SRCDIR) $(STAMPDIR)
-	mkdir -p $(STAGINGBASE)/$(TARBALLBASE)/`basename $@ .src-archive`.src
-	cd $(ORIGDIR)/`basename $@ .src-archive`; tar -czf $(STAGINGBASE)/$(TARBALLBASE)/`basename $@ .src-archive`.src/`basename $@ .src-archive`.src.tar.gz --exclude=CVS *
+	mkdir -p $(_ARCHIVE_DIR)
+	cd $(ORIGDIR)/$(_ARCHIVE_SRC_TREE_BASENAME); \
+	  tar -czf $(_ARCHIVE_DIR)/$(_ARCHIVE_NAME) --exclude=CVS *
 	touch $@
 
 .PHONY: archive-src-trees
